@startuml

scale 1.0
hide empty methods
hide empty attributes
skinparam arrowColor #DimGray
<style>
spotClass { BackgroundColor white }
</style>
skinparam class {
  BackgroundColor White
  HeaderBackgroundColor LightCoral
}

class Enemy {
}

class Skill {
}

class PriorityStrategy {
}

class SequentialStrategy {
  currentIndex: number
}

class WeightedStrategy {
  weights: number[]
}

class ConditionalStrategy {
  conditions: StrategyCondition[]
}

Enemy <|-- StrategicEnemy
Enemy <|-- OldMan
StrategicEnemy <|-- StrategicMeleeEnemy
StrategicEnemy *-- Strategy
Strategy <|-- Skill
Skill <|-- Message
Strategy <|-- PriorityStrategy
Strategy <|-- SequentialStrategy
Strategy <|-- WeightedStrategy
Strategy <|-- ConditionalStrategy
PriorityStrategy *-- "*" Strategy
SequentialStrategy *-- "*" Strategy
WeightedStrategy *-- "*" Strategy
ConditionalStrategy *-- "*" Strategy

@enduml
